RESOLVED FIXED273104
[IFC] Do not call RenderBlockFlow::invalidateLineLayoutPath on renderer insertion/removal when there's no line layout
https://bugs.webkit.org/show_bug.cgi?id=273104
Summary [IFC] Do not call RenderBlockFlow::invalidateLineLayoutPath on renderer inser...
alan
Reported 2024-04-22 19:44:51 PDT
ssia
Attachments
[fast-cq]Patch (2.39 KB, patch)
2024-04-22 20:18 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-04-22 20:18:57 PDT
Created attachment 471058 [details] [fast-cq]Patch
EWS
Comment 2 2024-04-24 10:59:29 PDT
Committed 277935@main (52ad4683bb23): <https://commits.webkit.org/277935@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471058 [details].
Radar WebKit Bug Importer
Comment 3 2024-04-24 11:00:18 PDT
Note You need to log in before you can comment on or make changes to this bug.