[IFC] Do not call RenderBlockFlow::invalidateLineLayoutPath on renderer insertion/removal when there's no line layout https://bugs.webkit.org/show_bug.cgi?id=273104

Reviewed by Antti Koivisto.

At this point invalidateLineLayoutPath is not really about invalidating the codepath (more like destroying LineLayout) so no reason to call it unless we have modernLayout.

* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::invalidateLineLayoutAfterTreeMutationIfNeeded):

Canonical link: https://commits.webkit.org/277935@main